fix: header should have z-index

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,5 +1,6 @@
 :host {
 	position: sticky;
+	z-index: 999;
 	top: 8px;
 	left: 0;
 	width: 100%;
